--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,4 +1,7 @@
 .dashboard {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 	@media (max-width: 480px) {
 		padding: 10px;
 		gap: 10px;
