--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ html {
 
 body {
 	margin: 0;
-	height: 100%;
+	height: 100vh;
 	font-family: OpenSans, Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	color: rgba(255, 255, 255, 0.3);
@@ -65,12 +65,13 @@ p {
 	flex-direction: column;
 	width: 100%;
 	min-width: 380px;
-	min-height: 100%;
+	height: 100%;
 }
 
 .container {
 	max-width: 1920px;
 	width: 100%;
+	height: 100% ;
 	margin: 0 auto;
 	padding: 0 20px;
 	background-image: url('/bg_2.png');
