--- a/src/components/BotCard/BotCard.scss
+++ b/src/components/BotCard/BotCard.scss
@@ -1,7 +1,6 @@
 .bots-list {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 	gap: 2px;
 }
 
@@ -20,7 +19,6 @@
 	transition: box-shadow 0.3s ease-in-out;
 
 	@media (max-width: 480px) {
-		max-width: 100px;
 		padding: 10px;
 	}
 
