--- a/src/index.scss
+++ b/src/index.scss
@@ -64,14 +64,14 @@ p {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-width: 380px;
+	min-width: 320px;
 	height: 100%;
 }
 
 .container {
 	max-width: 1920px;
 	width: 100%;
-	height: 100% ;
+	height: 100%;
 	margin: 0 auto;
 	padding: 0 20px;
 	background-image: url('/bg_2.png');
@@ -79,7 +79,7 @@ p {
 	background-position: top center;
 
 	@media (max-width: 480px) {
-		padding: 10px;
+		padding: 0 10px;
 	}
 }
 
