--- a/src/components/BotCard/BotCard.scss
+++ b/src/components/BotCard/BotCard.scss
@@ -26,54 +26,78 @@
 		box-shadow: inset 0 0 50px rgba(19, 92, 226, 0.2);
 	}
 
-	&:nth-child(1)::after {
+	&:nth-child(n)::after {
 		content: '';
 		display: block;
 		position: absolute;
-		background-image: url('/arrow-left-top.png');
 		background-repeat: no-repeat;
-		bottom: -15%;
-		right: -10%;
+		background-size: contain;
 		width: 87px;
 		height: 72px;
+
+		@media (max-width: 800px) {
+			width: 70px;
+			height: 60px;
+		}
+		@media (max-width: 480px) {
+			width: 50px;
+			height: 40px;
+		}
+	}
+
+	&:nth-child(1)::after {
+		background-image: url('/arrow-left-top.png');
+		bottom: -15%;
+		right: -10%;
+		@media (max-width: 800px) {
+			bottom: -18%;
+			right: -20%;
+		}
 	}
 
 	&:nth-child(3)::after {
-		content: '';
-		display: block;
-		position: absolute;
 		background-image: url('/arrow-right-top.png');
-		background-repeat: no-repeat;
 		bottom: -15%;
-		left: -10%;
-		width: 87px;
-		height: 72px;
+		left: -12%;
+
+		@media (max-width: 800px) {
+			bottom: -18%;
+			left: -20%;
+		}
+	}
+
+	&:nth-child(4)::after,
+	&:nth-child(6)::after {
+		bottom: 50%;
+		width: 100px;
+		height: 20px;
+
+		@media (max-width: 800px) {
+			width: 70px;
+			height: 10px;
+		}
+
+		@media (max-width: 480px) {
+			width: 50px;
+			height: 10px;
+		}
 	}
 
 	&:nth-child(4)::after {
-		content: '';
-		display: block;
-		position: absolute;
 		background-image: url('/arrow-left-bottom.png');
-		background-repeat: no-repeat;
-		bottom: 50%;
 		right: -10%;
-		width: 100px;
-		height: 20px;
+		@media (max-width: 800px) {
+			right: -25%;
+		}
 	}
 
 	&:nth-child(6)::after {
-		content: '';
-		display: block;
-		position: absolute;
 		background-image: url('/arrow-right-bottom.png');
-		background-repeat: no-repeat;
-		bottom: 50%;
 		left: -10%;
-		width: 100px;
-		height: 20px;
+		@media (max-width: 800px) {
+			left: -15%;
+		}
 	}
-
 	.bot-card__image {
 		display: block;
 		width: 90px;
